--- a/stylez.css
+++ b/stylez.css
@@ -985,6 +985,20 @@
                 display: block;
             }
         }
+
+.backdrop {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(128, 128, 128, 0.5);
+            z-index: 999;
+            opacity: 0;
+            pointer-events: none;
+            transition: opacity 0.3s ease;
+            }
+            
         
         @media (max-width: 480px) {
             .container {
@@ -1016,6 +1030,7 @@
 
 
         }
+
 
 
 
