--- a/stylez.css
+++ b/stylez.css
@@ -629,7 +629,7 @@
             color: #000;
             cursor: pointer;
             transition: all 0.3s ease;
-            border-right: 1px solid #8c6942;
+            border-right: 1px solid #a4834e;
         }
         
         .tab-btn:hover{
@@ -639,7 +639,7 @@
 
         .tab-btn.active{
            color: #000;
-            background: #8c6942; 
+            background: #a4834e; 
             box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
         }
         
@@ -1044,6 +1044,7 @@
 
 
         }
+
 
 
 
