--- a/stylez.css
+++ b/stylez.css
@@ -634,12 +634,12 @@
         
         .tab-btn:hover{
             color: #000;
-            background: #8c6942;
+            background: #c4af802;
         }
 
         .tab-btn.active{
            color: #000;
-            background: #a4834e; 
+            background: #b2945b; 
             box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
         }
         
@@ -1044,6 +1044,7 @@
 
 
         }
+
 
 
 
