--- a/stylez.css
+++ b/stylez.css
@@ -412,7 +412,7 @@
             padding: 0.5rem 1rem;
             font-size: 0.8125rem;
             font-weight: 500;
-            background-color: #059669;
+            background-color: #dacfae;
             color: var(--white);
             margin-bottom: 0.75rem;
             box-shadow: var(--shadow-light);
@@ -1044,6 +1044,7 @@
 
 
         }
+
 
 
 
