--- a/stylez.css
+++ b/stylez.css
@@ -639,7 +639,7 @@
 
         .tab-btn.active{
            color: #000;
-            background: #b2945b; 
+            background: #533c30; 
             box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
         }
         
@@ -1044,6 +1044,7 @@
 
 
         }
+
 
 
 
