--- a/stylez.css
+++ b/stylez.css
@@ -412,7 +412,7 @@
             padding: 0.5rem 1rem;
             font-size: 0.8125rem;
             font-weight: 500;
-            background-color: #dacfae;
+            background-color: #b2945b;
             color: var(--white);
             margin-bottom: 0.75rem;
             box-shadow: var(--shadow-light);
@@ -634,12 +634,12 @@
         
         .tab-btn:hover{
             color: #000;
-            background: #c4af802;
+            background: #b2945b;
         }
 
         .tab-btn.active{
            color: #000;
-            background: #533c30; 
+            background: #a4834e; 
             box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
         }
         
@@ -1044,6 +1044,7 @@
 
 
         }
+
 
 
 
