--- a/stylez.css
+++ b/stylez.css
@@ -638,7 +638,7 @@
         }
 
         .tab-btn.active{
-           color: #000;
+           color: #fff;
             background: #a4834e; 
             box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
         }
@@ -1044,6 +1044,7 @@
 
 
         }
+
 
 
 
