--- a/stylez.css
+++ b/stylez.css
@@ -939,7 +939,8 @@
 
 .cart-actions {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: center;
     gap: 10px;
     margin-top: auto;
 }
@@ -1046,6 +1047,7 @@
 
 
         }
+
 
 
 
