--- a/stylez.css
+++ b/stylez.css
@@ -940,7 +940,7 @@
 .cart-actions {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     gap: 10px;
     margin-top: auto;
 }
@@ -1047,6 +1047,7 @@
 
 
         }
+
 
 
 
