--- a/stylez.css
+++ b/stylez.css
@@ -934,7 +934,7 @@
     border-top: 1px solid var(--border-color);
     padding-top: 10px;
     font-weight: 700;
-    margin-top: auto; /* Pushes subtotal to the bottom */
+    margin-top: 50px; /* Pushes subtotal to the bottom */
 }
 
 .cart-actions {
@@ -1048,6 +1048,7 @@
 
 
         }
+
 
 
 
