--- a/stylez.css
+++ b/stylez.css
@@ -943,6 +943,7 @@
     justify-content: space-between;
     gap: 10px;
     margin-top: auto;
+    margin-left: 10px;
 }
 
 .cart-actions button {
@@ -1048,6 +1049,7 @@
 
 
         }
+
 
 
 
