--- a/stylez.css
+++ b/stylez.css
@@ -949,7 +949,6 @@
 .cart-actions button {
     padding: 10px 40px;
     border: 1px solid var(--border-color);
-    background-color: #000;
     cursor: pointer;
     font-size: 16px;
     font-weight: 500;
@@ -963,6 +962,7 @@
 
 .view-cart-btn {
     color: #fff;
+    border: 1px solid black;
             
 }
 
@@ -1049,6 +1049,7 @@
 
 
         }
+
 
 
 
