--- a/stylez.css
+++ b/stylez.css
@@ -968,7 +968,7 @@
 
 .view-cart-btn:hover {
     border-color: var(--primary-color);
-    color: white;
+    color: black;
 }
 
 .checkout-btn {
@@ -1049,6 +1049,7 @@
 
 
         }
+
 
 
 
