--- a/stylez.css
+++ b/stylez.css
@@ -961,7 +961,7 @@
 }
 
 .view-cart-btn {
-    color: #fff;
+    color: black;
     border: 1px solid black;
             
 }
@@ -1049,6 +1049,7 @@
 
 
         }
+
 
 
 
