--- a/stylez.css
+++ b/stylez.css
@@ -962,6 +962,7 @@
 .view-cart-btn {
     color: #000;
     border: 1px solid #000;
+    background-color: #fff;
             
 }
 
@@ -1048,6 +1049,7 @@
 
 
         }
+
 
 
 
