--- a/stylez.css
+++ b/stylez.css
@@ -934,6 +934,7 @@
     padding-top: 10px;
     font-weight: 700;
     margin-top: 350px; /* Pushes subtotal to the bottom */
+    margin-left: 5px;
 }
 
 .cart-actions {
@@ -1048,6 +1049,7 @@
 
 
         }
+
 
 
 
