--- a/stylez.css
+++ b/stylez.css
@@ -628,19 +628,19 @@
             border: none;
             font-size: 1rem;
             font-weight: bold;
-            color: #000;
+            color: #2f1f19;
             cursor: pointer;
             transition: all 0.3s ease;
             border-right: 1px solid #b2945b;
         }
         
         .tab-btn:hover{
-            color: #000;
+            color: #2f1f19;
             background: #a1721b;
         }
 
         .tab-btn.active{
-           color: #fff;
+           color: #2f1f19f;
             background: #4d3811; 
             box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
         }
@@ -1049,6 +1049,7 @@
 
 
         }
+
 
 
 
