--- a/stylez.css
+++ b/stylez.css
@@ -641,7 +641,7 @@
 
         .tab-btn.active{
            color: #2f1f19f;
-            background: #a4834e1; 
+            background: #b2945b; 
             box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
         }
         
@@ -1049,6 +1049,7 @@
 
 
         }
+
 
 
 
