--- a/stylez.css
+++ b/stylez.css
@@ -628,7 +628,7 @@
             border: none;
             font-size: 1rem;
             font-weight: bold;
-            color: #fff;
+            color: #000;
             cursor: pointer;
             transition: all 0.3s ease;
             border-right: 1px solid #b2945b;
@@ -640,7 +640,7 @@
         }
 
         .tab-btn.active{
-           color: #2f1f19f;
+           color: #fff;
             background: #b2945b; 
             box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
         }
@@ -1049,6 +1049,7 @@
 
 
         }
+
 
 
 
