--- a/stylez.css
+++ b/stylez.css
@@ -631,12 +631,12 @@
             color: #000;
             cursor: pointer;
             transition: all 0.3s ease;
-            border-right: 1px solid #b2945b;
+            
         }
         
         .tab-btn:hover{
             color: #2f1f19;
-            background: #a1721b;
+            background: #dacfae;
         }
 
         .tab-btn.active{
@@ -1049,6 +1049,7 @@
 
 
         }
+
 
 
 
