--- a/stylez.css
+++ b/stylez.css
@@ -613,7 +613,7 @@
         
         .tab-nav {
             display: flex;
-            background: #c4af80;
+            background: #dacfae;
             overflow: hidden;
             margin-bottom: 0;
             list-style: none;
@@ -1049,6 +1049,7 @@
 
 
         }
+
 
 
 
