--- a/stylez.css
+++ b/stylez.css
@@ -636,7 +636,7 @@
         
         .tab-btn:hover{
             color: #2f1f19;
-            background: #dacfae;
+            background: #a4834e;
         }
 
         .tab-btn.active{
@@ -1049,6 +1049,7 @@
 
 
         }
+
 
 
 
